[package]
name = "edk"
description = "Elements Dev Kit"
version = "0.1.0"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]

[dependencies]
elements = { version = "0.18.0", features = ["serde-feature"] }
elements-miniscript = { version = "0.1.0" }
bitcoin = { version = "0.27", features = [ "use-serde", "rand" ] }
bdk = { version = "0.11.0" }
miniscript = { version = "5.1.0" }
electrum-client = { version = "0.7", optional = true }
bip39 = { version = "^2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "^0.1.22"

[features]
electrum = ["electrum-client"]
