[package]
name = "edk"
description = "Elements Dev Kit"
version = "0.1.0"
authors = ["Luca Vaccaro <me@lvaccaro.com>"]

[dependencies]
elements = { version = "0.21.0", features = ["serde"] }
elements-miniscript = { git = "https://github.com/ElementsProject/elements-miniscript.git"}
bitcoin = { version = "0.29.2", features = [ "serde", "rand" ] }
bdk = { version = "0.27.0" }
miniscript = { version = "5.1.0" }
electrum-client = { version = "0.7", optional = true }
bip39 = { version = "^2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "^0.1.22"

[features]
electrum = ["electrum-client"]
